# coverage-check-example

./: .ghci  example.cabal  hie.yaml  stack.yaml
src/: Q72168364.hs
src/Test/Q72168364/: Hedgehog.hs  QuickCheck.hs
test/: test.hs
