version: 0

name:
  example
cabal-version:
  >= 1.10
build-type:
  Simple
tested-with:
    GHC == 8.10.7

source-repository head
  type: git
  location: git@github.com:moodmosaic/coverage-check-example.git

library
  build-depends:
   -- GHC 8.0.1 / base-4.9.0.0 (May 2016)
      base                            >= 4.9        && < 5
    , array                           >= 0.5        && < 0.6
    , hedgehog                        >= 1.1        && < 2.0
    , QuickCheck                      >= 2.12       && < 2.15
    , random                          >= 1.2.1      && < 1.3
    , test-framework                  >= 0.8        && < 0.9
    , test-framework-quickcheck2      >= 0.3.0.5    && < 0.4

  ghc-options:
    -Wall

  hs-source-dirs:
    src

  exposed-modules:
    -- https://stackoverflow.com/a/72182415
    Q72168364

    Test.Q72168364.Hedgehog
    -- https://stackoverflow.com/a/72182415
    Test.Q72168364.QuickCheck

  default-language:
    Haskell2010

test-suite test
  type:
    exitcode-stdio-1.0

  main-is:
    test.hs

  ghc-options:
    -Wall

  hs-source-dirs:
    test

  build-depends:
      example
    , base                            >= 3          && < 5

  default-language:
    Haskell2010
